# instant-translator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
cmake/: coverage.cmake  glog-download.cmake  glog.cmake  googletest-download.cmake  googletest.cmake
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/apis/: api.cpp  api.h  googleapi.cpp  googleapi.h  microsoftapi.cpp  microsoftapi.h  tempapi.cpp  tempapi.h
src/configs/: api.ini  config.ini
src/dialogs/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/exceptions/: invalidargumentexception.h
src/resources/: languages.json
src/resources/configs/: api.ini
src/utils/: api.h  apisettings.cpp  apisettings.h  appsettings.cpp  appsettings.h  customnetworkreply.cpp  customnetworkreply.h  googleapi.cpp  googleapi.h  language.cpp  language.h  requestmanager.cpp  requestmanager.h
test/: CMakeLists.txt  add_test.cpp
tests/: CMakeLists.txt  language_test.cpp
tests/utils/: apisettings_test.cpp  appsettings_test.cpp  customnetworkreply_test.cpp  language_test.cpp  requestmanager_test.cpp
